--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "browserify": "^12.0.1",
     "eslint": "^1.9.0",
-    "glob": "^5.0.15"
+    "glob": "^5.0.15",
+    "lodash": "^3.10.1",
+    "object-assign": "^4.0.1"
   }
 }
