--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mkdir": "mkdir -p ./dist",
     "lint": "eslint *.js",
     "lintv": "eslint --version",
+    "dev":"http-server ./dist -p 8866",
     "build": "npm run build:html & npm run build:vendor & npm run build:client",
     "build:html": "cp ./src/index.html ./dist/.",
     "build:vendor": "npm run build:vendor:objectass & npm run build:vendor:merge",
@@ -26,6 +27,7 @@
     "browserify": "^12.0.1",
     "eslint": "^1.9.0",
     "glob": "^5.0.15",
+    "http-server": "^0.8.5",
     "lodash": "^3.10.1",
     "object-assign": "^4.0.1"
   }
